--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>Portfolio app template with Angular 2</title>
+    <title>Front end Developer portfolio</title>
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -12,7 +12,15 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    
+    <!-- Bootstrap CSS -->
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- Fonts -->
+    <script src="https://use.fontawesome.com/4e4b329964.js"></script>
+
+    
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
