--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
+
+     <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
   </body>
 
 </html>
