--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Fonts -->
     <script src="https://use.fontawesome.com/4e4b329964.js"></script>
 
+    <!--  Devicon icons -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+
     
     <!-- 2. Configure SystemJS -->
     <script>
@@ -40,7 +43,6 @@
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
-
      <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
